统一样式